--- a/style.css
+++ b/style.css
@@ -4,25 +4,32 @@
     box-sizing: border-box;
 }
 
+body {
+    color: white;
+    background: rgb(140,136,11);
+    background: linear-gradient(132deg, rgba(140,136,11,1) 0%, rgba(96,97,5,1) 36%, rgba(0,0,0,1) 100%);
+}
+
+/* Styling aside */
+
 aside {
     float: left;
     width: 15vw;
     height: calc( 100vh - 100px);
-    background-color: red;
+    background-color: rgba(0,0,0,0.8);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
 
-aside div {
-    background-color: yellow;
+aside img {
+    width: 100%;
 }
 
 main {
     float: left;
     width: 85vw;
     height: calc( 100vh - 100px);
-    background-color: blue;
     overflow-y: scroll;
 }
 
@@ -44,23 +51,30 @@ main {
 
 .artist {
     padding: 20px 5px;
+    text-align: center;
 }
 
+.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
 .container>p {
     padding-left: 20px;
 }
 
 .disc-wrapper img {
-    height: 150px;
-    width: 150px;
+    height: auto;
+    width: 100px;
     object-fit: contain;
+    border-radius: 50%;
 }
 
 footer {
     float: left;
     width: 100vw;
     height: 100px;
-    background-color: green;
+    background-color: rgb(40, 40, 40);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -69,6 +83,7 @@ footer {
 footer>div {
     padding: 0 10px;
 }
+
 .footer-right {
     display: none;
 }
@@ -93,5 +108,18 @@ footer>div {
 
     .hamb {
         display: none;
+    }
+
+    .container {
+        width: 75%;
+        margin: auto;
+    }
+}
+
+@media (min-width:1200px) {
+
+    .container {
+        width: 60%;
+        margin: auto;
     }
 }
