--- a/style.css
+++ b/style.css
@@ -142,8 +142,6 @@ main {
 
 .img-rounded {
     border-radius: 50%;
-    width: 100%;
-    height: auto;
 }
 
 .container {
@@ -156,23 +154,91 @@ main {
     font-weight: bold;
 }
 
+/* Styling footer */
+
 footer {
     float: left;
     width: 100vw;
     height: 100px;
-    background-color: rgb(40, 40, 40);
     display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(40, 40, 40);
+    color: rgb(179, 179, 179);
+}
+
+footer>div, footer>div>div {
+    padding: 0 10px;
+}
+
+footer img {
+    width: 50px;
+    height: auto;
+    object-fit: contain;
+}
+
+.footer-left {
+    display: flex;
+    align-items: center;
     justify-content: space-between;
+}
+
+.footer-left p {
+    display: none;
+    font-size: 12px;
+    margin-right: 15px;
+    font-weight: bold;
+    color: white;
+}
+
+.footer-left span {
+    font-weight: 500;
+    color: rgb(179, 179, 179);
+}
+
+#fc-top, #fc-bottom {
+    display: flex;
+    justify-content: space-around;
     align-items: center;
 }
 
-footer>div {
+#fc-top i:nth-of-type(3) {
+    font-size: 30px;
+}
+
+.linea {
+    height: 3px;
+    background-color: grey;
+    border-radius: 10px;
+    position: relative;
+}
+
+#linea1 {
+    width: 200px;
+    margin-top: 20px;
+}
+
+#linea2 {
+    width: 100px;
+}
+
+.linea i {
+    position: absolute;
+    color: white;
+    top: 50%;
+    left: 40%;
+    transform: translateY(-50%);
+}
+
+.footer-right>i {
     padding: 0 10px;
 }
 
 .footer-right {
     display: none;
 }
+
+/* Media queries */
 
 @media (min-width:568px) {
 
@@ -190,6 +256,7 @@ footer>div {
         margin-top: 10px;
     }
 }
+
 @media (min-width:768px) {
 
     aside {
@@ -198,6 +265,10 @@ footer>div {
 
     main {
         width: 77vw;
+    }
+
+    footer {
+        justify-content: space-between;
     }
 
     .top-aside {
@@ -231,16 +302,27 @@ footer>div {
         margin-top: 20px;
     }
 
-    .footer-right {
-        display: block;
-    }
-
     .disc-wrapper {
         justify-content: flex-start;
     }
+    
+    #linea1 {
+        width: 500px;
+    }
 }
 
+@media (min-width:992px) {
 
+    .footer-right {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .footer-left p {
+        display: block;
+    }
+}
 @media (min-width:1200px) {
 
     .container {
@@ -251,7 +333,7 @@ footer>div {
     .menu {
         padding-top: 30px;
     }
-    
+
     .menu ul, .menu li {
         display: inline-block;
     }
